[fix bug 881107] [RTL] Mozilla Support at the top is not aligned on the right

--- a/media/less/main.less
+++ b/media/less/main.less
@@ -42,6 +42,10 @@ body {
     margin: 0;
     padding: 0;
     text-align: right;
+    
+    > header .logo {
+      float: right;
+    }
   }
 
   > header {
